--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kotowaza-bot",
   "version": "1.0.0",
   "description": "## About This is a simple bot for use with the Twitter API. It tweets a random kotowaza (Japanese proverb) every 30 minutes.",
+  "type": "module",
   "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
