--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "## About This is a simple bot for use with the Twitter API. It tweets a random kotowaza (Japanese proverb) every 30 minutes.",
   "type": "module",
-  "main": "bot.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,6 +12,7 @@
     "url": "git+https://github.com/jeh-c/kotowaza-bot.git"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "node-twitterbot": "^0.2.2",
     "twit": "^2.2.9"
   },
